--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ GITHUB_API_TOKEN=your_token_here
 
 # tutor settings
 TUTOR_RUN_SCHEDULE=once
-TUTOR_USERS_COUNT=10
+TUTOR_USERS_COUNT=15
 TUTOR_EXERCISE_START_DELAY_MIN=0
 TUTOR_EXERCISE_START_DELAY_MAX=30
 TUTOR_QUESTION_DURATION_MIN=20
@@ -18,3 +18,5 @@ DB_NAME=compprehension
 DB_USER=user
 DB_PASSWORD=p@ssw0rd
 DB_PORT=3306
+LOG_FILE_TEMPLATE="full_log.log"
+RANDOM_SEED=
