--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ GITHUB_API_TOKEN=your_token_here
 
 # tutor settings
 TUTOR_RUN_SCHEDULE=once
-TUTOR_USERS_COUNT=15
+TUTOR_GENERATOR_THRESHOLD=42
+TUTOR_USERS_COUNT=10
 TUTOR_EXERCISE_START_DELAY_MIN=0
 TUTOR_EXERCISE_START_DELAY_MAX=30
 TUTOR_QUESTION_DURATION_MIN=20
